WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50397
Style Fixes in WebPluginController
https://bugs.webkit.org/show_bug.cgi?id=50397
Summary
Style Fixes in WebPluginController
Joseph Pecoraro
Reported
2010-12-02 09:45:24 PST
There are some variable reuses for iterators and counters. That is confusing and not WebKit style.
Attachments
[PATCH] Style fixes
(2.70 KB, patch)
2010-12-02 09:58 PST
,
Joseph Pecoraro
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2010-12-02 09:58:45 PST
Created
attachment 75389
[details]
[PATCH] Style fixes
Joseph Pecoraro
Comment 2
2010-12-02 10:08:12 PST
Landed in
r73149
:
http://trac.webkit.org/changeset/73149
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug