2010-12-02  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Eric Carlson.

        Style Fixes in WebPluginController
        https://bugs.webkit.org/show_bug.cgi?id=50397

        * Plugins/WebPluginController.mm:
        (-[WebPluginController startAllPlugins]):
        (-[WebPluginController stopAllPlugins]):

Canonical link: https://commits.webkit.org/63592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73149 268f45cc-cd09-0410-ab3c-d52691b4dbfc